# algonet

./: .gitignore  Diagram Grading Setup  Diagram Grading Setup.drawio  README.md  a.out
.github/workflows/: CI.yml
algonetAPI/: pom.xml
algonetAPI/databaseCreationAndInsertion/: Creation.sql  Insertion.sql  README.md
algonetAPI/logs/: algonet.csv
algonetAPI/src/main/resources/: application-dev.properties  application-prod.properties  application.properties  logback-spring.xml
algonetAPI/src/main/resources/static/css/: custom.css
algonetAPI/src/main/resources/templates/: dashboard.html  home.html  layout.html  profile.html
algonetAPI/src/main/resources/templates/auth/: login.html  signup.html
algonetAPI/src/test/resources/: application-test.properties  application.properties  test-data.sql
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  constants.tsx  main.tsx  types.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/features/: Header.module.css  Header.tsx
frontend/src/pages/: Dashboard.module.css  Dashboard.tsx  Home.tsx  Login copy.tsx  Login.module.css  Login.tsx  ProblemPage.module.css  ProblemPage.tsx  Signup.module.css  Signup.tsx  TagPage.module.css  TagPage.tsx
frontend/src/services/: authService.tsx  problemService.tsx  tagService.tsx
frontend/src/styles/: Header.css  Login.css  colors.css  index.css
grader/: CMakeLists.txt  Cargo.toml  main.cpp
grader/include/: Database.h  Server.h  TestRunner.h
grader/src/: Database.cpp  Server.cpp  TestRunner.cpp
(+120 files in other folders)
